modernizacion de crear y editar portafolio

--- a/Paginas/admin.html
+++ b/Paginas/admin.html
@@ -57,7 +57,7 @@
         { titulo: "Cotizaciones Generadas", cantidad: 40, icono: "💰", url: "../Paginas/admin_cotizaciones" },
         { titulo: "Estado de Pagos", cantidad: 25, icono: "💳", url: "../Paginas/admin_pagos.html" },
         { titulo: "Facturación Emitida", cantidad: 25, icono: "🧾", url: "../Paginas/admin_facturacion.html" },
-        { titulo: "Administrar Portafolios", cantidad: 25, icono: "📁", url: "../Paginas/admin_portafolio.html" },
+        { titulo: "Administrar Portafolios", cantidad: 25, icono: "📁", url: "../Paginas/portafolio.html" },
         { titulo: "Moderación de Reseñas", cantidad: 25, icono: "⭐", url: "../Paginas/moderacionResenas.html" },
         { titulo: "Gestión de Contenido", cantidad: 25, icono: "📝", url: "../Paginas/admin_blogs.html" }
       ];
