--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -11,221 +11,255 @@
     body {
       font-family: 'Roboto', sans-serif;
     }
-  </style>
+    #currentImages img,
+    #previewContainer img {
+      max-width: 100px;
+      max-height: 100px;
+      object-fit: cover;
+      border-radius: 0.5rem;
+      border: 1px solid #161a7e;
+    }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
 
-<!-- Encabezado -->
-<header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm">
-  <div class="flex justify-between items-center">
-    <h1 class="text-xl font-semibold text-gray-800">Modificar Proyecto Existente</h1>
-    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
-      🏠 Inicio
-    </button>
+<body class="bg-gray-50 h-screen">
+  <div class="flex min-h-screen">
+    <div class="flex-1 flex flex-col overflow-hidden">
+
+      <!-- Encabezado -->
+      <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
+        <div class="flex items-center justify-between px-3 py-3">
+          <h1 class="text-xl font-semibold text-gray-800">Modificar Proyecto Existente</h1>
+          <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
+            🏠 Inicio
+          </button>
+        </div>
+      </header>
+
+      <!-- Contenido principal -->
+      <main class="flex-1 overflow-y-auto bg-gray-100 scroll-smooth">
+        <!-- Envoltura sin centrado, ocupa toda la pantalla -->
+        <div class="w-full h-full p-4">
+          <!-- Contenedor general ajustado -->
+          <div class="border-[3px] border-[#161a7e] rounded-xl p-4 bg-[#f7f7f738] shadow-md w-full h-full flex flex-col flex-1 min-h-0">
+            <form id="editForm" class="flex flex-col gap-6 flex-1 min-h-0">
+
+              <!-- Cuerpo del formulario -->
+              <div class="flex flex-col lg:flex-row gap-6 flex-1 min-h-0">
+
+                <!-- Columna izquierda -->
+                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 items-center overflow-auto">
+
+                  <!-- Título y Estado -->
+                  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
+                    <div class="w-full lg:w-2/3">
+                      <input 
+                        type="text"
+                        name="titulo"
+                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+                        value="Proyecto de Ejemplo"
+                        required>
+                    </div>
+
+                    <div class="w-full lg:w-1/3">
+                      <select
+                        name="estado"
+                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+                        required>
+                        <option value="" disabled selected>Elegir estado</option>
+                        <option value="borrador">Borrador</option>
+                        <option value="publicado">Publicado</option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <!-- Descripción -->
+                  <div class="w-full max-w-[600px]">
+                    <textarea
+                      name="descripcion"
+                      class="w-full px-2 py-1 min-h-[100px] border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+                      required>Descripción del proyecto...</textarea>  
+                  </div>
+
+                  <!-- Fila con 2 selects -->
+                  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
+                    <div class="w-full lg:w-1/2">
+                      <select
+                        name="categoria"
+                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+                        required>
+                        <option value="">Seleccionar Categoría</option>
+                        <option value="obra_blanca">Obra Blanca</option>
+                        <option value="obra_negra">Obra Negra</option>
+                        <option value="mantenimiento">Mantenimiento</option>
+                      </select>
+                    </div>
+
+                    <div class="w-full lg:w-1/2">
+                      <select
+                        name="tipo_servicio"
+                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+                        required>
+                        <option value="">Seleccionar Servicio</option>
+                        <option value="construccion">Construcción</option>
+                        <option value="remodelacion">Remodelación</option>
+                        <option value="asesoria">Asesoría</option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <!-- Imágenes actuales -->
+                  <div class="w-full max-w-[600px]">
+                    <div 
+                      id="currentImages"
+                      class="flex flex-wrap gap-3 justify-center items-center max-w-full overflow-auto max-h-64">
+                      <!-- Se insertan por JS -->
+                    </div>
+                  </div>
+
+                </div> <!-- Fin columna izquierda -->
+
+                <!-- Columna derecha -->
+                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 items-center justify-center overflow-auto">
+
+                  <!-- Nuevas imágenes -->
+                  <div class="w-full">
+                    <label class="block font-medium text-gray-800 mb-1 text-lg text-center">Agregar Nuevas Imágenes</label>
+                    <input 
+                      type="file" 
+                      id="newImagesInput" 
+                      name="imagenes[]" 
+                      multiple 
+                      accept="image/*"
+                      class="w-full border-[1px] border-[#161a7e] px-2 py-1 rounded-lg bg-[#f0f4ff] text-gray-800">
+                    <small class="text-gray-500 block mt-1 text-center">Puedes seleccionar varias imágenes (máximo 4).</small>
+                    <p id="imageCount" class="text-sm text-blue-600 mt-1 hidden text-center"></p>
+
+                    <div 
+                      id="previewContainer" 
+                      class="flex flex-wrap gap-3 justify-center mt-3 overflow-auto max-w-full max-h-64">
+                      <!-- Imágenes cargadas dinámicamente -->
+                    </div>
+                  </div>
+
+                  <!-- Botones -->
+                  <div class="flex justify-center gap-6 pt-4 w-full">
+                    <button type="button" onclick="window.location.href='portafolio.html'" class="w-40 px-6 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
+                      Cancelar
+                    </button>
+                    <button type="submit" class="w-40 px-6 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457]">
+                      Actualizar
+                    </button>
+                  </div>
+
+                </div> <!-- Fin columna derecha -->
+
+              </div> <!-- Fin del cuerpo del formulario -->
+
+            </form>
+          </div>
+        </div>
+      </main>
+    </div>
   </div>
-</header>
-
-<!-- Contenedor general con borde envolvente -->
-<div class="border-[3px] border-[#161a7e] rounded-xl m-6 p-6 bg-[#f7f7f738] shadow-md">
-
-  <!-- Formulario principal -->
-  <form id="editForm" class="flex flex-col gap-6 items-stretch justify-evenly">
-
-    <!-- Cuerpo del formulario -->
-    <div class="flex flex-col md:flex-row gap-6 items-stretch">
-      
-      <!-- Columna izquierda -->
-      <div class="w-full md:w-[35%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
-        
-        <!-- Fila con Título y Estado -->
-        <div class="flex flex-col lg:flex-row gap-4">
-          <!-- Título -->
-          <div class="w-full lg:w-2/3">
-            <label class="block font-medium text-gray-800 mb-1 text-lg">Título del Proyecto</label>
-            <input 
-              type="text" name="titulo"class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"value="Proyecto de Ejemplo"required>
-          </div>
-
-          <!-- Estado -->
-          <div class="w-full lg:w-1/3">
-            <label class="block font-medium text-gray-800 mb-1 text-lg">Estado</label>
-            <select
-              name="estado"
-              class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-              required
-            >
-              <option value="borrador">Borrador</option>
-              <option value="publicado" selected>Publicado</option>
-            </select>
-          </div>
-        </div>
-
-        <!-- Descripción -->
-        <div class="flex-1 flex flex-col">
-          <label class="block font-medium text-gray-800 mb-1 text-lg">Descripción</label>
-          <textarea name="descripcion" class="w-full px-2 py-1 min-h-[120px] border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]" required>Descripción del proyecto...</textarea>
-        </div>
-
-        <!-- Fila con 2 selects -->
-        <div class="flex flex-col lg:flex-row gap-4">
-          <!-- Categoría -->
-          <div class="w-full lg:w-1/2">
-            <label class="block font-medium text-gray-800 mb-1 text-lg">Categoría</label>
-            <select
-              name="categoria"
-              class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-              required
-            >
-              <option value="">Seleccionar</option>
-              <option value="obra_blanca">Obra Blanca</option>
-              <option value="obra_negra">Obra Negra</option>
-              <option value="mantenimiento">Mantenimiento</option>
-            </select>
-          </div>
-
-          <!-- Tipo de servicio -->
-          <div class="w-full lg:w-1/2">
-            <label class="block font-medium text-gray-800 mb-1 text-lg">Tipo de Servicio</label>
-            <select
-              name="tipo_servicio"
-              class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-              required
-            >
-              <option value="">Seleccionar</option>
-              <option value="construccion">Construcción</option>
-              <option value="remodelacion">Remodelación</option>
-              <option value="asesoria">Asesoría</option>
-            </select>
-          </div>
-        </div>
-          <br>
-      </div>
-
-      <!-- Columna derecha -->
-      <div class="w-full md:w-[65%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
-        <!-- Imágenes actuales -->
-        <div>
-          <label class="block font-medium text-gray-800 mb-2 text-lg">Imágenes Actuales</label>
-          <div id="currentImages" class="flex flex-wrap gap-3">
-            <!-- Imágenes actuales se cargarán aquí mediante JavaScript --> 
-          </div>
-        </div>
-
-        <!-- Nuevas imágenes -->
-        <div>
-          <label class="block font-medium text-gray-800 mb-1 text-lg">Agregar Nuevas Imágenes</label>
-          <input 
-            type="file" 
-            id="newImagesInput" 
-            name="imagenes" 
-            multiple 
-            accept="image/*"
-            class="w-full border-[1px] border-[#161a7e] px-2 py-1 rounded-lg bg-[#f0f4ff] text-gray-800"
-          >
-          <small class="text-gray-500 block mt-1">Puedes seleccionar varias imágenes (máximo 4).</small>
-          <p id="imageCount" class="text-sm text-blue-600 mt-1 hidden"></p>
-          <div id="previewContainer" class="mt-4 flex flex-wrap gap-3"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Botones centrados -->
-    <div class="flex justify-center gap-6 pt-4">
-      <button type="button" onclick="window.location.href='portafolio.html'" class="w-40 px-6 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
-        Cancelar
-      </button>
-      <button type="submit" class="w-40 px-6 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457]">
-        Actualizar
-      </button>
-    </div>
-  </form>
-</div>
-
+</body>
 
   <!-- Scripts -->
-  <script>
-    // Imágenes actuales (simuladas desde backend)
-    const imagenesActuales = [
-      "https://picsum.photos/id/1011/200/150",
-      "https://picsum.photos/id/1012/200/150",
-      "https://picsum.photos/id/1013/200/150",
-      "https://picsum.photos/id/1015/200/150"
-    ];
-    const currentImagesContainer = document.getElementById("currentImages");
+<script>
+  const imagenesActuales = [
+    "https://picsum.photos/id/1011/200/150",
+    "https://picsum.photos/id/1012/200/150",
+    "https://picsum.photos/id/1013/200/150",
+    "https://picsum.photos/id/1015/200/150"
+  ];
 
-    imagenesActuales.forEach((src, index) => {
+  const currentImagesContainer = document.getElementById("currentImages");
+  const newImagesInput = document.getElementById("newImagesInput");
+  const previewContainer = document.getElementById("previewContainer");
+  const imageCount = document.getElementById("imageCount");
+
+  // Para manejar los archivos seleccionados dinámicamente
+      let archivosSeleccionados = [];
+
+      // Función reutilizable para crear imagen con botón de eliminar
+      function crearVistaPreviaImagen(src, contenedor, onDelete) {
       const wrapper = document.createElement("div");
-      wrapper.className = "relative group";
+      wrapper.className = "relative group inline-block";
 
       const img = document.createElement("img");
       img.src = src;
-      img.alt = `Imagen ${index + 1}`;
-      img.className = "w-32 h-24 object-cover rounded border";
+      img.className = "w-28 h-20 object-cover rounded border";
 
       const deleteBtn = document.createElement("button");
       deleteBtn.type = "button";
       deleteBtn.innerHTML = "✕";
-      deleteBtn.className = "absolute top-0 right-0 bg-red-600 text-white rounded-full w-6 h-6 text-xs flex items-center justify-center opacity-0 group-hover:opacity-100 transition";
+      deleteBtn.className = "absolute -top-2 -right-2 bg-red-600 text-white rounded-full w-5 h-5 text-xs flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-200";
       deleteBtn.title = "Eliminar imagen";
 
       deleteBtn.addEventListener("click", () => {
         wrapper.remove();
+        onDelete?.(); // Ejecuta callback si se pasó
       });
 
       wrapper.appendChild(img);
       wrapper.appendChild(deleteBtn);
-      currentImagesContainer.appendChild(wrapper);
+      contenedor.appendChild(wrapper);
+    }
+
+
+  // Mostrar imágenes actuales (simuladas desde backend)
+  imagenesActuales.forEach(src => {
+    crearVistaPreviaImagen(src, currentImagesContainer);
+  });
+
+  // Manejar nuevas imágenes seleccionadas
+  newImagesInput.addEventListener("change", () => {
+    const files = Array.from(newImagesInput.files);
+    archivosSeleccionados = files.slice(0, 4); // Solo permitir hasta 4
+
+    previewContainer.innerHTML = ""; // Limpiar previews anteriores
+
+    // Mostrar previews con opción a eliminar
+    archivosSeleccionados.forEach((file, index) => {
+      const reader = new FileReader();
+      reader.onload = e => {
+        crearVistaPreviaImagen(e.target.result, previewContainer, () => {
+          // Eliminar el archivo de la lista y actualizar input
+          archivosSeleccionados.splice(index, 1);
+          actualizarInputFiles();
+        });
+      };
+      reader.readAsDataURL(file);
     });
+  });
 
-    // Previsualización nuevas imágenes
-    const newImagesInput = document.getElementById("newImagesInput");
-    const previewContainer = document.getElementById("previewContainer");
-    const imageCount = document.getElementById("imageCount");
+  // Actualiza el input de archivos usando DataTransfer
+  function actualizarInputFiles() {
+    const dataTransfer = new DataTransfer();
+    archivosSeleccionados.forEach(file => dataTransfer.items.add(file));
+    newImagesInput.files = dataTransfer.files;
 
-    newImagesInput.addEventListener("change", () => {
-      previewContainer.innerHTML = "";
-      const files = newImagesInput.files;
+    // Actualizar contador visual
+    if (archivosSeleccionados.length > 0) {
+      imageCount.textContent = `Imágenes seleccionadas: ${archivosSeleccionados.length}`;
+      imageCount.classList.remove("hidden");
+    } else {
+      imageCount.classList.add("hidden");
+    }
+  }
 
-      if (files.length > 0) {
-        imageCount.textContent = `Imágenes seleccionadas: ${files.length}`;
-        imageCount.classList.remove("hidden");
-      } else {
-        imageCount.classList.add("hidden");
-      }
-
-      if (files.length > 4) {
-        imageCount.textContent = "⚠️ Solo se permiten hasta 4 imágenes.";
-        imageCount.classList.add("text-red-600");
-      } else {
-        imageCount.classList.remove("text-red-600");
-      }
-
-      Array.from(files).slice(0, 4).forEach(file => {
-        const reader = new FileReader();
-        reader.onload = e => {
-          const img = document.createElement("img");
-          img.src = e.target.result;
-          img.className = "w-32 h-24 object-cover rounded border";
-          previewContainer.appendChild(img);
-        };
-        reader.readAsDataURL(file);
-      });
-    });
-
-    // Validación al enviar el formulario
-    document.getElementById("editForm").addEventListener("submit", function (e) {
-      const files = newImagesInput.files;
-
-      if (files.length > 4) {
-        e.preventDefault();
-        alert("❌ Solo puedes subir hasta 4 imágenes.");
-        return;
-      }
-
+  // Validación al enviar el formulario
+  document.getElementById("editForm").addEventListener("submit", function (e) {
+    if (archivosSeleccionados.length > 4) {
       e.preventDefault();
-      alert("✅ Proyecto actualizado correctamente (simulado).");
-      window.location.href = "portafolio.html";
-    });
-  </script>
+      alert("❌ Solo puedes subir hasta 4 imágenes.");
+      return;
+    }
+
+    e.preventDefault();
+    alert("✅ Proyecto actualizado correctamente (simulado).");
+    window.location.href = "portafolio.html";
+  });
+</script>
 </body>
 </html>
