--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -48,11 +48,12 @@
               <div class="flex flex-col lg:flex-row gap-6 flex-1 min-h-0">
 
                 <!-- Columna izquierda -->
-                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 items-center overflow-auto">
+                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 justify-space-around overflow-auto">
 
                   <!-- Título y Estado -->
                   <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
                     <div class="w-full lg:w-2/3">
+                      <label class="block font-medium text-gray-800 mb-1 text-lg text-center">Agregar Nuevas Imágenes</label>
                       <input 
                         type="text"
                         name="titulo"
@@ -120,7 +121,7 @@
                 </div> <!-- Fin columna izquierda -->
 
                 <!-- Columna derecha -->
-                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 items-center justify-center overflow-auto">
+                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 justify-evenly overflow-auto">
 
                   <!-- Nuevas imágenes -->
                   <div class="w-full">
